--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,3 +16,14 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
+
+ # Collection für die index.html-Seite hinzufügen
+  - name: "index"
+    label: "Startseite"
+    files:
+      - label: "Index-Seite"
+        name: "index"
+        file: "index.html"  # Pfad zu deiner Index-HTML-Datei
+        fields:
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}  # Du kannst HTML als Text einfüg
