--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: git-gateway
   branch: master  # Change this to your main branch
 
+locale: 'de'  # Setzt die Sprache auf Deutsch
+
 # This line should *not* be indented
 media_folder: "static/images/uploads" # Media files will be stored in the repo under images/uploadspublic_folder: "/assets/images/uploads"
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
