--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   branch: master  # Change this to your main branch
 
 locale: 'de'  # Setzt die Sprache auf Deutsch
+publish_mode: editorial_workflow
 
 # This line should *not* be indented
 media_folder: "/images" # Media files will be stored in the repo under images/uploadspublic_folder: "/assets/images/uploads"
